Changed the slogan at the top of the page

--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
     </div>
     <div class="lss-page">
       <div class="lss-content shadow-2">
-        <h1>Welcome to our webpage!</h1>
-        <p>
-          Check back later for more content.
-        </p>
+        <h1><center>Let’s find your software solution.</center></h1>
       </div>
       <div class="lss-image-parallax-4" >
       </div>
