--- a/index.html
+++ b/index.html
@@ -36,33 +36,70 @@
       <div class="lss-image-parallax-2" >
       </div>
       <div class="lss-content shadow-2">
-        <h1>Mission Statement</h1>
+        <h1>Web Applications</h1>
         <p>
-          Our mission is to provide well rounded, effective advice for all of our customer's software needs. Far to often technical information is overly complicated and followed with “trust me”.  We are committed to giving enough time to effectively explain the problem, solution, and implementation.  This is achieved through constant feed back with the customer and continual improvement.
+          Static HTML sites are a thing of the past. Today’s customer expects a browsing experience optimized for desktops, tablets, and mobile devices. We here at LSS utilize modern web development techniques and tools to achieve a responsive and streamlined experience for your customer, regardless of device.
         </p>
       </div>
       <div class="lss-image-parallax-3" >
       </div>
       <div class="lss-content  shadow-2">
-        <h1>Mission Statement</h1>
+        <h1>Development Methodology</h1>
         <p>
-          Our mission is to provide well rounded, effective advice for all of our customer's software needs. Far to often technical information is overly complicated and followed with “trust me”.  We are committed to giving enough time to effectively explain the problem, solution, and implementation.  This is achieved through constant feed back with the customer and continual improvement.
+          Software Development is no longer done behind closed doors. Quality software is delivered through receiving continual feedback from you, our customer via frequent software demos. We use these interactions to hone the application to better fit your needs
         </p>
       </div>
-      <div class="lss-image-parallax" >
+      <div class="lss-image-parallax-2" >
       </div>
       <div class="lss-content shadow-2">
-        <h1>Mission Statement</h1>
+        <h1>Legacy Applicationst</h1>
         <p>
-          Our mission is to provide well rounded, effective advice for all of our customer's software needs. Far to often technical information is overly complicated and followed with “trust me”.  We are committed to giving enough time to effectively explain the problem, solution, and implementation.  This is achieved through constant feed back with the customer and continual improvement.
+          Bringing your application out of the “dark ages.”  Take your existing business information and move it to a new technology by Applying modern techniques, frameworks, and designs.  Leading your company into the future.
         </p>
       </div>
-      <div class="lss-image-parallax" >
+      <div class="lss-image-parallax-3" >
       </div>
       <div class="lss-content  shadow-2">
-        <h1>Mission Statement</h1>
+        <h1>Full Stack Web Development</h1>
         <p>
-          Our mission is to provide well rounded, effective advice for all of our customer's software needs. Far to often technical information is overly complicated and followed with “trust me”.  We are committed to giving enough time to effectively explain the problem, solution, and implementation.  This is achieved through constant feed back with the customer and continual improvement.
+          In house experience with projects that require multiple users leveraging the power of the internet to conduct business anywhere. Throughout the development process there will be continual feedback, with the ability to make changes to effectively take care of your needs.
+        </p>
+      </div>
+      <div class="lss-image-parallax-3" >
+      </div>
+      <div class="lss-content  shadow-2">
+        <h1>Hardware and Software Integration </h1>
+        <p>
+          Taking the company’s new toys and finding a way to better integrate them with existing software or creating new tools for integrating technology to maximize business intelligence. If you need integrated software, we can help define and develop a wide range of solutions.
+      </div>
+      <div class="lss-image-parallax-3" >
+      </div>
+      <div class="lss-content  shadow-2">
+        <h1>Business Software Implementation</h1>
+        <p>
+          Helping you choose and integrate with the software your company needs to grow. Can handle communications with software providers to better understand technical issues and assist you in finding a successful implementation.
+      </div>
+      <div class="lss-image-parallax-3" >
+      </div>
+      <div class="lss-content  shadow-2">
+        <h1>Code Reviews and QA</h1>
+        <p>
+          Hear at LSS we have extensive knowledge of high level and low level testing.  As a third party we can perform independent third party evaluations of software to provide the highest quality testing standards.
+        </p>
+      </div>
+      <div class="lss-image-parallax-3" >
+      </div>
+      <div class="lss-content  shadow-2">
+        <h1>Desktop and Mobile Application</h1>
+        <p>
+          Does you company need a custom mobile application to take it to the next level.  Let us help you take that step with are experience with making small standalone applications and large integrated applications integrated with a web server.
+      </div>
+      <div class="lss-image-parallax-3" >
+      </div>
+      <div class="lss-content  shadow-2">
+        <h1>Contact</h1>
+        <p>
+          Please call Michael Holtmann at (404)431-8272 or email Michael.Holtmann@LinkedSoftwareSolutions.com with any questions or to set up a consoltaiont.
         </p>
       </div>
     </div>
